# RoboticsProject

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
Atlas/: AbstractFactory.h  GenLinearHierarchy.h  GenScatterHierarchy.h  Singleton.h  Timer.cpp  Timer.h
MotionCapture/: CMakeLists.txt  MotionCapture.h  MotionCapture.qrc  MotionCapture.ui  main.cpp
NUI/: CMakeLists.txt  NUI.cpp  NUI.h  UserDetector.cpp  UserDetector.h  XnErrorChecker.h  Xtion.cpp  main.cpp
SPPBoard/: SPPCommand.h  _i2c.c  _i2c.h  _lcd.c  _outcompare.c  _outcompare.h  _uart.c  maekawa.c  maekawa.h
SpeechRecognition/: CMakeLists.txt  SpeechRecognition.cpp  SpeechRecognition.h  SpeechRecognitionTest.cpp  fast.jconf  julius.jconf  main.cpp
SpeechRecognition/gram/: kaden.grammar  kaden.voca
Unity/: CMakeLists.txt  Unity.cpp  Unity.h  test.cpp  unity.i
UserRecognition/: AudioDevice.h  CMakeLists.txt  ImageDevice.h  InitDevice.xml  UserRecognition.cpp  UserRecognition.h  UserRecognitionTest.cpp  UserStatus.h  XnErrorChecker.cpp
VoiceRecognition/: CMakeLists.txt  SpeechRecognition.cpp  SpeechRecognition.h  main.cpp
VoiceRecognition/gram/: kaden.dfa  kaden.term
installer/: Sensor-Bin-Linux-x86-v5.1.2.1.tar.bz2  install.sh
src/RDP/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/RDP/MotionCapture/: CMakeLists.txt  Motion.cpp  Motion.h  MotionCapture.cpp  MotionCapture.h  MotionCapture.ui  PoseManager.cpp  PoseManager.cpp~  PoseManager.h  PoseManager.h~  PoseManeger.cpp  PoseManeger.h  main.cpp
src/RDP/MotionCapture/motions/: 001_hand_up_right.txt  002_hand_up_left.txt
src/RDP/SPPCommandSender/: CMakeLists.txt  CommandSenderClient.cpp  CommandSenderClient.h  CommandSenderServer.cpp  CommandSenderServer.h  SPPBoard.cpp  SPPBoard.h  SPPCommand.h  SPPCommandSenderClient.h  SerialCommunication.cpp  SerialCommunication.h  main.cpp
src/RDP/SpeechRecognition/: CMakeLists.txt  SpeechRecognitionClient.cpp  SpeechRecognitionClient.h  SpeechRecognitionServer.cpp  SpeechRecognitionServer.h  Timer.cpp  julius.jconf  main.cpp
src/RDP/SpeechRecognition/gram/: kaden.dict
src/RDP/Unity/: CMakeLists.txt  TestUnity.cpp  Unity.cpp  Unity.h  main.cpp  unity.i
src/RDP/UnityScripts/: unity.py
src/RDP/UserRecognition/: CMakeLists.txt  InitDevice.xml  InitDevice.xml~  Motion.cpp  Motion.cpp~  Motion.h  Motion.h~  MotionDetector.cpp  MotionDetector.cpp~  MotionDetector.h  MotionDetector.h~  PoseManager.cpp  PoseManager.cpp~  PoseManager.h  UserDetector.cpp  UserDetector.cpp~  UserDetector.h  UserRecognitionClient.cpp  UserRecognitionClient.h  UserRecognitionServer.cpp  UserRecognitionServer.h  UserStatus.h  Xtion.cpp  Xtion.h  log.txt  main.cpp
src/RDP/launch/: MotionCapture.launch  all.launch  motion_capture.launch  unity_test.launch  unity_test.launch~
src/RDP/msg/: DetectMotion.msg  DetectUsers.msg  UserJoint.msg  UserPose.msg  UserStatus.msg
src/SPPBoard/: _i2c.c  _i2c.h  _lcd.h  _uart.h  main.c
